@@ -1,3 +1,7 @@
+Fri Feb 22 02:41:35 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/*.[ch]: update copyright string as appropriate
+
 Fri Feb 22 02:11:03 2008  Jiri (George) Lebl <jirka@5z.com>
 
 	* configure.in: raise version
